--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github-github.personal:DanielDwyerPersonal/string-compare-diff.git"
+    "url": "https://github.com/DanielDwyer/string-compare-diff"
   },
   "keywords": [
     "string",
