--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "string-compare-diff",
-  "version": "0.0.8",
-  "description": "Compare the difference between two strings using distance. Returns a number 0 to 1 showing exactly how related the two strings are.",
+  "version": "0.0.9",
+  "description": "Compare the difference between two strings using Levenshtein Distance. Returns a number 0 to 1 showing exactly how related the two strings are.",
   "main": "app.js",
   "scripts": {
     "test": "na"
